finish web header

--- a/index.html
+++ b/index.html
@@ -1,20 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web-Developer-Portfolio</title>
-    <link rel="stylesheet" href="/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://kit.fontawesome.com/dc754e34e2.js" crossorigin="anonymous"></script>
+  </head>
+  <body>
     <header>
-        
+      <div>
+        <img class="header-developer-img" src="/images/developer.png" alt="" />
+      </div>
+      <div class="header-img">
+        <nav class="nav-contan">
+          <h3 class="nav-tittle">Ma<span class="button-color">r</span>y</h3>
+          <ul>
+            <li class="nav-item">Portfolio</li>
+            <li class="nav-item">Blog</li>
+            <li><button class="nav-item-button">Hire Me</button></li>
+          </ul>
+        </nav>
+        <div class="header-main">
+          <div class="header-contan">
+            <h3 class="header-contan-text">Hi, I am</h3>
+            <h1 class="header-contan-tittle">Mary Hardy</h1>
+            <p class="header-contan-dittle">
+              Shot what able cold new see hold.Friendly as an betrayed formerly
+              he <br />. Morning because as to society behaved moments.
+            </p>
+            <button class="header-download-button"><i class="fa-solid fa-download"></i>        Download CV</button>
+            <button class="header-contact-button"><i class="fa-solid fa-phone"></i> Contact</button>
+          </div>
+          <div class="header-contan-img">
+            <img height="500px" src="/images/hardy.png" alt="" />
+          </div>
+        </div>
+      </div>
     </header>
-    <main>
-
-    </main>
-    <footer>
-
-    </footer>
-</body>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
